# Steptracker

./: Cargo.toml  README.md  StrideQuest_Professional_Proposal_Rust.docx
backend/: Cargo.toml
backend/migrations/: 001_initial.sql  002_unique_achievement.sql
backend/src/: db.rs  error.rs  main.rs  models.rs  utils.rs
backend/src/api/: achievements.rs  activities.rs  dashboard.rs  mod.rs  routes.rs  users.rs
estimation/: Cargo.toml
estimation/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts
frontend/src/components/: ActivityForm.tsx  LiveTracker.tsx  MapPicker.tsx  NavBar.tsx  RouteMapPreview.tsx  StepCard.tsx
frontend/src/pages/: ActivityLog.tsx  Dashboard.tsx  Profile.tsx  Routes.tsx
frontend/src/utils/: geo.ts
